--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="./script.js" defer> </script>
+    <script src="script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dagplanlegger</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vits-generator</h1>
-    <button id ="my-btn" onclick="showJoke()">Trykk her for å få en vits!</button>
+    
 </body>
 </html>
