--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Dagplanlegger</h1>
+    <div class="buttons">
+    <button id="food-btn">Mat</button>
+    <button  id="hobby-btn">Hobby</button>
+    <button id="workout-btn">Trening</button>
+    </div>
+    <button id ="reset-btn">Start på nytt!</button>
 </body>
 </html>
