--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <button  id="hobby-btn">Hobby</button>
     <button id="workout-btn">Trening</button>
     </div>
+    <div class="reset">
     <button id ="reset-btn">Start på nytt!</button>
+    </div>
 </body>
 </html>
